--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html"></a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -97,8 +97,8 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Contracts</h3>
+								<p>give information on contracts/ how it works/ what the options are for contract-type work. </p>
 								<ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -109,8 +109,8 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Job Opportunities</h3>
+								<p>fill in something here that convinces an employer to give me a full time job</p>
 								<ul class="actions special">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -124,8 +124,8 @@
 			<!-- CTA -->
 				<section id="cta">
 
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+					<h2>Let's talk!</h2>
+					<p>Leave your email below and i'll reach out to you within 2 business days</p>
 
 					<form>
 						<div class="row gtr-50 gtr-uniform">
