--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
+								<a href="#" class="icon solid fa-angle-down">Options</a>
 								<ul>
 									<li><a href="generic.html">Generic</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li><a href="elements.html">Elements</a></li>
 									<li>
-										<a href="#">Submenu</a>
+										<a href="#">Examples of Jobs</a>
 										<ul>
-											<li><a href="#">Option One</a></li>
+											<li><a href="#">Reddit Project</a></li>
 											<li><a href="#">Option Two</a></li>
 											<li><a href="#">Option Three</a></li>
 											<li><a href="#">Option Four</a></li>
@@ -37,7 +37,7 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<!-- <li><a href="#" class="button">Sign Up</a></li> -->
 						</ul>
 					</nav>
 				</header>
@@ -91,7 +91,6 @@
 							</section>
 						</div>
 					</section>
-
 					<div class="row">
 						<div class="col-6 col-12-narrower">
 
